--- a/apps/mobile-e2e/project.json
+++ b/apps/mobile-e2e/project.json
@@ -3,7 +3,8 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/mobile-e2e/src",
   "projectType": "application",
-  "targets": {},
   "tags": [],
-  "implicitDependencies": ["mobile"]
+  "implicitDependencies": ["mobile"],
+  "// targets": "to see all targets run: nx show project mobile-e2e --web",
+  "targets": {}
 }
