--- a/package.json
+++ b/package.json
@@ -5,56 +5,56 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@expo/metro-config": "~0.17.3",
-    "@expo/metro-runtime": "~3.1.1",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/metro-config": "0.18.8",
+    "@expo/metro-runtime": "3.2.1",
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.1.10",
-    "expo": "~50.0.3",
-    "expo-constants": "~15.4.5",
-    "expo-font": "~11.10.2",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.7",
-    "expo-splash-screen": "~0.26.1",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^51.0.21",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.18",
+    "expo-splash-screen": "0.27.5",
+    "expo-status-bar": "1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-svg-transformer": "^1.3.0",
-    "react-native-web": "~0.19.9",
+    "react-native": "0.74.3",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-svg-transformer": "1.3.0",
+    "react-native-web": "0.19.12",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@config-plugins/detox": "~6.0.0",
-    "@expo/cli": "~0.16.5",
-    "@nx/cypress": "18.0.4",
-    "@nx/detox": "18.0.4",
-    "@nx/eslint": "18.0.4",
-    "@nx/eslint-plugin": "18.0.4",
-    "@nx/expo": "18.0.4",
-    "@nx/jest": "18.0.4",
-    "@nx/js": "18.0.4",
-    "@nx/workspace": "18.0.4",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
-    "@testing-library/jest-dom": "6.2.0",
+    "@config-plugins/detox": "8.0.0",
+    "@expo/cli": "0.18.25",
+    "@nx/cypress": "19.4.4",
+    "@nx/detox": "19.4.4",
+    "@nx/eslint": "19.4.4",
+    "@nx/eslint-plugin": "19.4.4",
+    "@nx/expo": "19.4.4",
+    "@nx/jest": "19.4.4",
+    "@nx/js": "19.4.4",
+    "@nx/workspace": "19.4.4",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.12",
+    "@testing-library/jest-dom": "6.4.6",
     "@testing-library/jest-native": "~5.4.3",
-    "@testing-library/react-native": "~12.4.2",
+    "@testing-library/react-native": "12.5.1",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@types/react": "~18.2.45",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
     "babel-jest": "^29.4.1",
-    "babel-preset-expo": "~10.0.0",
-    "cypress": "^13.0.0",
-    "detox": "^20.16.0",
-    "eslint": "~8.48.0",
+    "babel-preset-expo": "11.0.9",
+    "cypress": "13.13.1",
+    "detox": "20.18.5",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
@@ -64,12 +64,12 @@
     "jest": "^29.4.1",
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "jest-expo": "~50.0.1",
-    "nx": "18.0.4",
+    "jest-expo": "51.0.3",
+    "nx": "19.4.4",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.2"
+    "typescript": "5.4.5"
   }
 }
