try development build

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -29,14 +29,7 @@
       "bundler": "metro"
     },
     "plugins": [
-      "expo-router",
-      [
-        "@config-plugins/detox",
-        {
-          "skipProguard": false,
-          "subdomains": ["10.0.2.2", "localhost"]
-        }
-      ]
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
