--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -1,23 +1,23 @@
 {
+  "cli": {
+    "version": ">= 10.1.1"
+  },
   "build": {
-    "production": {
-      "android": {
-        "buildType": "app-bundle"
-      }
-    },
     "development": {
       "developmentClient": true,
       "distribution": "internal"
     },
-    "preview": {
+    "development-simulator": {
+      "developmentClient": true,
       "distribution": "internal",
       "ios": {
         "simulator": true
-      },
-      "android": {
-        "buildType": "apk"
       }
-    }
+    },
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {}
   },
   "submit": {
     "production": {}
