--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "1.3.0",
     "react-native-web": "0.19.12",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "expo-dev-client": "~4.0.26"
   },
   "devDependencies": {
     "@config-plugins/detox": "8.0.0",
